store actions as jsonb in the delta_file_flows table